[package]
name = "contextswitch-types"
version = "0.1.0"
edition = "2021"
authors = ["David Rousselie <david@rousselie.name>"]

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8.0", features = ["serde"] }
chrono = { version = "0.4.0", features = ["serde"] }
http = "0.2.0"
